--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -180,9 +180,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="LxD-p0-LJC">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="dCL-vx-KY4">
+                                    <rect key="frame" x="10" y="2" width="394" height="56"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="dCL-vx-KY4" firstAttribute="leading" secondItem="LxD-p0-LJC" secondAttribute="leading" constant="10" id="1nK-Qf-4tc"/>
+                                <constraint firstAttribute="trailing" secondItem="dCL-vx-KY4" secondAttribute="trailing" constant="10" id="6w3-0b-cBT"/>
+                                <constraint firstItem="dCL-vx-KY4" firstAttribute="centerY" secondItem="LxD-p0-LJC" secondAttribute="centerY" id="WHe-oC-OBm"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="zAE-Uy-KWe" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zAE-Uy-KWe" id="vTr-d2-g4L">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -202,6 +218,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="dCL-vx-KY4" id="Ejh-os-zn4"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lSp-5T-J1f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -261,9 +280,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="cnv-ht-9EL">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="MBL-BJ-taz">
+                                    <rect key="frame" x="10" y="2" width="394" height="56"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="MBL-BJ-taz" firstAttribute="centerY" secondItem="cnv-ht-9EL" secondAttribute="centerY" id="7mE-CG-sJw"/>
+                                <constraint firstAttribute="trailing" secondItem="MBL-BJ-taz" secondAttribute="trailing" constant="10" id="aBf-ZT-c3l"/>
+                                <constraint firstItem="MBL-BJ-taz" firstAttribute="leading" secondItem="cnv-ht-9EL" secondAttribute="leading" constant="10" id="hXr-vk-Zqy"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="GAV-9N-EYC" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GAV-9N-EYC" id="GUD-74-wcD">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -277,6 +312,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Recommended" id="eev-IY-5eG"/>
+                    <connections>
+                        <outlet property="searchBar" destination="MBL-BJ-taz" id="AAX-ES-uG0"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZf-TK-QBY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
