--- a/Cells/FriendCollectionViewCell.xib
+++ b/Cells/FriendCollectionViewCell.xib
@@ -26,7 +26,7 @@
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CGD-sq-WAi" customClass="LikeControl" customModule="Swift_CustomApp" customModuleProvider="target">
-                        <rect key="frame" x="10" y="165" width="150" height="40"/>
+                        <rect key="frame" x="10" y="165" width="125" height="40"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="Keq-uX-zax"/>
@@ -40,9 +40,9 @@
                 <constraint firstAttribute="bottom" secondItem="CGD-sq-WAi" secondAttribute="bottom" constant="5" id="BFw-FY-aps"/>
                 <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Bvk-bE-cms"/>
                 <constraint firstItem="CGD-sq-WAi" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" constant="5" id="Dno-sx-4h5"/>
-                <constraint firstItem="CGD-sq-WAi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="e5T-S9-WsW"/>
+                <constraint firstAttribute="trailing" secondItem="CGD-sq-WAi" secondAttribute="trailing" constant="35" id="UUC-ai-MLV"/>
                 <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="gLR-Tf-mm1"/>
-                <constraint firstAttribute="trailing" secondItem="CGD-sq-WAi" secondAttribute="trailing" constant="10" id="vb9-a2-9aO"/>
+                <constraint firstItem="CGD-sq-WAi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="uYY-Qd-trv"/>
             </constraints>
             <size key="customSize" width="249" height="269"/>
             <connections>
