--- a/Cells/PostTableViewCell.xib
+++ b/Cells/PostTableViewCell.xib
@@ -44,28 +44,27 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kPq-Tf-m6Z">
-                        <rect key="frame" x="0.0" y="181" width="375" height="403"/>
+                        <rect key="frame" x="0.0" y="181" width="375" height="375"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewLayout key="collectionViewLayout" id="Ytw-fK-dUE" customClass="PostCollectionViewLayout" customModule="Swift_CustomApp" customModuleProvider="target"/>
                     </collectionView>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="DWS-Gl-FnZ">
-                        <rect key="frame" x="12" y="594" width="254.5" height="22"/>
+                        <rect key="frame" x="12" y="566" width="261" height="50"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvJ-GY-nss" userLabel="Like">
-                                <rect key="frame" x="0.0" y="0.0" width="83" height="22"/>
-                                <state key="normal" title="  " image="heart" catalog="system">
-                                    <color key="titleColor" red="0.2627450980392157" green="0.2627450980392157" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Iz-eQ-KbN" customClass="LikeControl" customModule="Swift_CustomApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="85" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra1-aj-vA6">
-                                <rect key="frame" x="86" y="1.5" width="82.5" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="88" y="15.5" width="85" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" image="message" catalog="system">
                                     <color key="titleColor" red="0.26274509800000001" green="0.26274509800000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUz-Ql-p8e">
-                                <rect key="frame" x="171.5" y="0.0" width="83" height="22"/>
+                                <rect key="frame" x="176" y="16" width="85" height="18.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" image="arrowshape.turn.up.right" catalog="system">
                                     <color key="titleColor" red="0.26274509800000001" green="0.26274509800000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -73,7 +72,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="52d-Yz-CwU">
-                        <rect key="frame" x="296.5" y="595" width="66.5" height="20"/>
+                        <rect key="frame" x="303" y="581" width="60" height="20"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="erU-Uw-RY6">
                                 <rect key="frame" x="0.0" y="1.5" width="26" height="16.5"/>
@@ -83,8 +82,8 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3Q-3J-D8h">
-                                <rect key="frame" x="29" y="0.0" width="37.5" height="20"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="29" y="0.0" width="31" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.26274509800000001" green="0.26274509800000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -129,7 +128,7 @@
                 <outlet property="commentsButton" destination="ra1-aj-vA6" id="nYy-SF-HxF"/>
                 <outlet property="createdByLabel" destination="RN4-tE-DQi" id="3Vv-g3-xRl"/>
                 <outlet property="imagesCollectionsViews" destination="kPq-Tf-m6Z" id="9Ax-eG-IXx"/>
-                <outlet property="likesButton" destination="hvJ-GY-nss" id="4by-Ye-4hv"/>
+                <outlet property="likeControl" destination="1Iz-eQ-KbN" id="RC2-jr-7EF"/>
                 <outlet property="profileImageView" destination="fiX-qo-RPf" id="7GN-qJ-MSn"/>
                 <outlet property="sharesButton" destination="hUz-Ql-p8e" id="rHC-dV-8Fa"/>
                 <outlet property="timeAgoLabel" destination="Rcz-Pi-iJS" id="WsU-rY-KTj"/>
@@ -143,7 +142,6 @@
         <image name="ceo_image" width="230" height="178"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="eye" catalog="system" width="128" height="81"/>
-        <image name="heart" catalog="system" width="128" height="109"/>
         <image name="message" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
